log
Thu 09 May 2024 02:16:29 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
9216ffa
Thu 09 May 2024 02:31:24 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  6|6
total_score: 15/70
d8e1088
Thu 09 May 2024 02:36:06 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  7|6
total_score: 15/70
2623adb
Thu 09 May 2024 02:36:40 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cfce5d7
Thu 09 May 2024 02:36:55 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
b17f6c3
Thu 09 May 2024 02:40:57 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
ab0da2d
Thu 09 May 2024 03:05:18 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:97:23: error: unused variable ‘minimumNode’ [-Werror=unused-variable]
   97 |             TreeNode *minimumNode = minimum(node->right);
      |                       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74a33e6
Thu 09 May 2024 03:05:32 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
7348c59
Thu 09 May 2024 04:37:32 AM UTC: 
 treemap.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
In file included from test.c:4:
treemap.c:89:1: error: expected identifier or ‘(’ before ‘}’ token
   89 | }
      | ^
Compilation failed
e50e07e
Thu 09 May 2024 04:37:39 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  15|4
total_score: 25/70
d172257
Thu 09 May 2024 04:38:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
40a508e
Thu 09 May 2024 04:39:31 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
3e8ad3d
Thu 09 May 2024 04:42:21 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
fdf70a4
Thu 09 May 2024 04:49:20 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
treemap.c:110:1: error: expected identifier or ‘(’ before ‘}’ token
  110 | }
      | ^
Compilation failed
6173430
Thu 09 May 2024 04:49:26 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|3
total_score: 40/70
471eb9f
Thu 09 May 2024 04:50:24 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
0b07b0a
Fri 10 May 2024 11:59:42 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
3a66a46
Sat 11 May 2024 12:00:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:151:20: error: passing argument 1 of ‘minimum’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  151 |     return minimum(tree)->pair;
      |                    ^~~~
      |                    |
      |                    TreeMap *
treemap.c:72:31: note: expected ‘TreeNode *’ but argument is of type ‘TreeMap *’
   72 | TreeNode * minimum(TreeNode * x){
      |                    ~~~~~~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
2b702a6
Sat 11 May 2024 12:01:58 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
03955ee
Sat 11 May 2024 12:02:37 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  20|2
total_score: 45/70
4fa5da9
